# daytrader

./: .dockerignore  .env.deploy.example  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: build.yml  lint.yml
config/: default.yaml
docker/postgres/: init.sql
docs/: dev-runbook.md  roadmap-and-research.md
plugins/: README.md
plugins/examples/: README.md
plugins/examples/buy_hold/: algorithm.py  manifest.yaml
plugins/examples/rsi_threshold/: algorithm.py  manifest.yaml
plugins/examples/template/: algorithm.py  manifest.yaml
scripts/: backup_restore_drill.sh  deploy_remote.py  entrypoint.sh
src/daytrader/: __init__.py  __main__.py
src/daytrader/admin/: __init__.py  rotate_encryption_key.py
src/daytrader/algorithms/: __init__.py  base.py  indicators.py  plugin_loader.py  registry.py
src/daytrader/algorithms/builtin/: __init__.py  adx_trend_filter.py  bollinger_bands.py  buy_hold.py  cci_reversal.py  cnn_lstm_trend.py  donchian_breakout.py  ema_crossover.py  feature_threshold.py  ichimoku_cloud.py  keltner_channel.py  lstm_trend.py  macd_signal.py  mean_reversion_zscore.py  obv_divergence.py  regime_hmm.py  rsi_divergence.py  rsi_mean_reversion.py  stochastic_rsi.py  supertrend.py  torch_base.py  transformer_trend.py  triple_ema.py  volume_profile.py  vwap_bands.py  williams_r.py  xgboost_trend.py
src/daytrader/algorithms/dag/: __init__.py  combinators.py  composite.py  serialization.py  types.py  validation.py
src/daytrader/algorithms/rl/: __init__.py  bandit_allocator.py  bandit_serialization.py  gym_env.py  ppo_agent.py  reward_shapers.py  sac_agent.py
src/daytrader/algorithms/sandbox/: __init__.py  adapter.py  installer.py  manager.py  protocol.py  worker_main.py
src/daytrader/auth/: __init__.py  invites.py  password.py  roles.py  service.py  session.py
src/daytrader/backtest/: __init__.py  engine.py  fees.py  portfolio.py  risk.py  tracking.py  walk_forward.py
src/daytrader/core/: __init__.py  audit.py  context.py  crypto.py  gates.py  pubsub.py  settings.py  supervisor.py
src/daytrader/core/events/: __init__.py  base.py  market.py  orders.py  signals.py
src/daytrader/core/types/: __init__.py  bars.py  common.py  orders.py  personas.py  positions.py  signals.py  symbols.py  visualize.py
src/daytrader/data/: __init__.py  marketdata_bus.py
src/daytrader/data/adapters/: __init__.py  alpaca_adapter.py  alpha_vantage_adapter.py  base.py  binance_public_adapter.py  registry.py  twelve_data_adapter.py  yfinance_adapter.py
src/daytrader/data/features/: __init__.py  store.py
src/daytrader/data/macro/: __init__.py  base.py  fred_adapter.py
src/daytrader/data/sentiment/: __init__.py  base.py  newsapi_adapter.py
src/daytrader/digest/: __init__.py  service.py  supervisor.py  worker.py
src/daytrader/execution/: __init__.py  alpaca.py  base.py  binance.py  credentials.py  kill_switch.py  loop.py  paper.py  registry.py  supervisor.py
src/daytrader/journal/: __init__.py  writer.py
src/daytrader/notifications/: __init__.py  base.py  noop.py  service.py  slack.py  throttle.py
src/daytrader/research/: __init__.py  drift_monitor.py  exploration_agent.py  feature_hydration.py  feature_lift.py  promotion.py  scheduler.py  shadow_scheduler.py  shadow_trading.py  supervisor.py
src/daytrader/risk/: __init__.py  correlation_monitor.py  global_risk.py
src/daytrader/storage/: __init__.py  database.py  models.py  repository.py  seed.py
src/daytrader/storage/migrations/: env.py
src/daytrader/ui/: __init__.py  alerts.py  app.py  middleware.py  regime_watcher.py  reports.py  services.py  services_brokers.py  services_charts.py  services_onboarding.py  services_regime.py  services_research.py  shell.py
src/daytrader/ui/components/: __init__.py  dag_render.py  param_form.py  sweep_form.py
src/daytrader/ui/pages/: __init__.py  admin_audit.py  admin_tenants.py  admin_users.py  auth.py  bandit_builder.py  broker_credentials.py  cache.py  charts.py  dag_composer.py  home.py  journal.py  persona_detail.py  personas.py  plugins.py  research_lab.py  strategies.py  (+5 more)
tests/: conftest.py
tests/integration/: test_e2e.py  test_sandbox_backtest.py  test_sandbox_installer.py  test_sandbox_worker.py
tests/unit/: test_algorithm_context.py  test_algorithm_param.py  test_alpaca_adapter.py  test_alpaca_executor.py  test_audit.py  test_backtest_engine.py  test_bandit_serialization.py  test_binance_executor.py  test_broker_credentials.py  test_buy_hold.py  test_cnn_lstm_trend.py  test_correlation_monitor.py  test_dag_combinators.py  test_dag_composite.py  test_dag_render.py  test_dag_serialization.py  test_dag_types.py  test_digest.py  test_drift_monitor.py  test_example_plugins.py  test_execution_registry.py  test_explainability.py  test_feature_lift.py  test_feature_store.py  test_fees.py  test_gates.py  test_global_risk.py  test_indicators.py  test_journal_writer.py  test_kill_switch.py  test_lstm_trend.py  test_marketdata_bus.py  test_notifications.py  test_onboarding.py  test_paper_executor.py  test_plugin_loader.py  test_promote_to_live.py  test_promotion.py  test_pubsub.py  test_regime_hmm.py  (+15 more)
(+9 files in other folders)
