[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daytrader"
version = "0.1.0"
description = "Multi-asset algorithmic trading platform"
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "Martin" }]

dependencies = [
    # UI
    "nicegui>=2.7",
    # Data frames
    "polars>=1.0",
    "pandas>=2.2",
    "numpy>=1.26",
    # Storage
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # Config / validation
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    # Backtest / indicators
    "backtesting>=0.3.3",
    # Data providers
    "ccxt>=4.3",
    "yfinance>=0.2.40",
    "alpaca-py>=0.21",
    # ML
    "xgboost>=2.0",
    "scikit-learn>=1.5",
    "hmmlearn>=0.3",
    "mlflow>=2.14",
    # Scheduling
    "apscheduler>=3.10",
    # Security
    "cryptography>=42",
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.3",
    # Infra
    "redis>=5.0",
    "httpx>=0.27",
    # Logging
    "structlog>=24.1",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml",
    "types-passlib",
    "aiosqlite>=0.20",
]

# Phase 5: deep learning algorithms.
dl = [
    "torch>=2.2",
]

# Reserved for Phase 3+ (bulk optimization, GPU features).
opt = [
    "vectorbt>=0.26",
]

[project.scripts]
daytrader = "daytrader.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/daytrader"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
