[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daytrader"
version = "0.1.0"
description = "Multi-asset algorithmic trading platform"
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "Martin" }]

dependencies = [
    # UI
    "nicegui>=2.7",
    # Data frames
    "polars>=1.0",
    "pandas>=2.2",
    "numpy>=1.26",
    # Storage
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # Config / validation
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    # Backtest / indicators
    "backtesting>=0.3.3",
    # Data providers
    "ccxt>=4.3",
    "yfinance>=0.2.40",
    "alpaca-py>=0.21",
    # ML
    "xgboost>=2.0",
    "scikit-learn>=1.5",
    "hmmlearn>=0.3",
    "mlflow>=2.14",
    # Scheduling
    "apscheduler>=3.10",
    # Security
    "cryptography>=42",
    "passlib[argon2]>=1.7",
    "argon2-cffi>=23",
    "python-jose[cryptography]>=3.3",
    # Infra
    "redis>=5.0",
    "httpx>=0.27",
    # Logging
    "structlog>=24.1",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml",
    "types-passlib",
    "aiosqlite>=0.20",
    # scripts/deploy_remote.py uses paramiko; only needed locally to
    # push files / run commands on the deployment host.
    "paramiko>=3.4",
]

# Phase 5: deep learning algorithms.
dl = [
    "torch>=2.2",
]

# Phase 7: reinforcement learning algorithms.
rl = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "torch>=2.2",
]

# Reserved for Phase 3+ (bulk optimization, GPU features).
opt = [
    "vectorbt>=0.26",
]

# Sentiment scoring for Exploration Agent.
sentiment = [
    "vaderSentiment>=3.3",
]

[project.scripts]
daytrader = "daytrader.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/daytrader"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# RUF001/RUF003 flag Greek letters (σ, ρ, ×) as look-alike Latin chars,
# but this codebase uses them for their actual mathematical meaning
# (standard deviation, correlation, multiplication) in user-visible
# strings. Ignoring keeps the math notation intact.
#
# SIM117 wants `with A, B:` instead of nested `with A: with B:`. NiceGUI
# code uses nested `with` to mirror DOM hierarchy — flattening hurts
# readability without changing behavior.
ignore = ["E501", "RUF001", "RUF003", "SIM117"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# Bug-catching checks stay on (None-safety, attribute access, argument
# types, return values). Stylistic strict-mode checks (require every
# function annotated, require generic type args on dict/list, complain
# about returning Any) are off — gradually tightenable over time
# without holding the rest of the suite hostage.
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true
no_implicit_optional = true
check_untyped_defs = true
warn_unreachable = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
